--- a/package.json
+++ b/package.json
@@ -1,36 +1,105 @@
 {
+  "name": "chess-app",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vike dev",
-    "build": "vike build",
-    "preview": "vike build && vike preview",
-    "lint": "eslint .",
-    "shadcn": "npx shadcn@latest"
+    "nodemon": "nodemon --exec tsx api/index.ts",
+    "build": "tsc -b && NODE_ENV=production vike build"
+  },
+  "imports": {
+    "#front/*": "./src/frontend/*.ts",
+    "#frontx/*": "./src/frontend/*.tsx",
+    "#back/*": "./src/backend/*.ts"
   },
   "dependencies": {
-    "vike": "^0.4.247",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "vike-react": "^0.6.13",
+    "@hookform/resolvers": "^5.2.2",
+    "@number-flow/react": "^0.5.10",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tailwindcss/node": "^4.1.17",
+    "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.10",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.5",
+    "@types/express-session": "^1.18.2",
+    "@types/multer": "^1.4.13",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.17",
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
+    "chess.js": "^1.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "compression": "^1.8.1",
+    "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "file-type": "^20.5.0",
+    "form-data": "^4.0.5",
+    "glicko2": "^1.2.1",
+    "input-otp": "^1.4.2",
+    "lucide-react": "^0.507.0",
+    "mailtrap": "^4.3.0",
+    "mongoose": "^8.20.1",
+    "motion": "^12.23.24",
+    "multer": "1.4.5-lts.2",
+    "next-themes": "^0.4.6",
+    "node-cron": "^4.2.1",
+    "nodemon": "^3.1.11",
+    "ogl": "^1.0.11",
+    "package.json": "^0.0.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "react": "^19.2.0",
+    "react-chessboard": "^4.7.3",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.66.1",
+    "sharp": "^0.34.5",
+    "sirv": "^3.0.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "lucide-react": "^0.554.0",
-    "@radix-ui/react-icons": "^1.3.2",
-    "tw-animate-css": "^1.4.0"
+    "tailwindcss": "^4.1.17",
+    "ts-node": "^10.9.2",
+    "vike": "^0.4.247",
+    "vike-react": "^0.6.13",
+    "vike-server": "^1.0.25",
+    "zod": "^3.25.76"
+  },
+  "optionalDependencies": {
+    "lightningcss-linux-x64-gnu": "^1.30.2"
   },
   "devDependencies": {
-    "typescript": "^5.9.3",
-    "vite": "^7.2.4",
-    "eslint": "^9.39.1",
     "@eslint/js": "^9.39.1",
-    "typescript-eslint": "^8.48.0",
-    "globals": "^16.5.0",
-    "eslint-plugin-react": "^7.37.5",
-    "@vitejs/plugin-react": "^5.1.1",
+    "@types/compression": "^1.8.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.19.1",
+    "@types/passport-local": "^1.0.38",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "tailwindcss": "^4.1.17",
-    "@tailwindcss/vite": "^4.1.17"
-  },
-  "type": "module"
+    "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "tsx": "^4.20.6",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "~5.7.3",
+    "typescript-eslint": "^8.47.0",
+    "vite": "^7.2.4"
+  }
 }
