--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "vike": "^0.4.247",
     "vike-react": "^0.6.13",
     "vike-server": "^1.0.25",
