--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -10,10 +10,10 @@
     },
     "target": "ES2020",
     "module": "CommonJS",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "strict": true
+    "moduleResolution": "node10",
+    "esModuleInterop": true
+    //"skipLibCheck": true,
+    //"strict": true
   },
   "include": ["src/server"],
   "exclude": ["src/pages", "src/client"]
