--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -11,8 +11,8 @@
     "target": "ES2020",
     "module": "CommonJS",
     "moduleResolution": "node10",
-    "esModuleInterop": true
-    //"skipLibCheck": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true
     //"strict": true
   },
   "include": ["src/server"],
