--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -12,8 +12,8 @@
     "module": "CommonJS",
     "moduleResolution": "node10",
     "esModuleInterop": true,
-    "skipLibCheck": true
-    //"strict": true
+    //"skipLibCheck": true,
+    "strict": true
   },
   "include": ["src/server"],
   "exclude": ["src/pages", "src/client"]
