--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "composite": true,
     "outDir": "dist/server",
+    "rootDir": "src",
     "baseUrl": ".",
     "paths": {
       "#front/*": ["src/client/*"],
@@ -14,5 +15,5 @@
     "skipLibCheck": true,
     "strict": true
   },
-  "include": ["src/server", "vite.config.ts"]
+  "include": ["src/server"]
 }
