--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,5 +18,6 @@
     "jsx": "react-jsx",
     "skipLibCheck": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/server"]
 }
