--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vike dev",
+    "dev": "ts-node -r tsconfig-paths/register src/server/server.ts",
     "nodemon": "nodemon --exec tsx src/server/server.ts",
     "build": "tsc -b && vike build",
     "start": "node dist/server.js"
   },
   "imports": {
-    "#front/*": "./src/frontend/*.ts",
-    "#frontx/*": "./src/frontend/*.tsx",
-    "#back/*": "./src/backend/*.ts"
+    "#front/*": "./src/client/*.ts",
+    "#back/*": "./src/server/*.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -76,7 +75,6 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
     "vike": "^0.4.247",
     "vike-react": "^0.6.13",
     "vike-server": "^1.0.25",
