--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,12 +3,12 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "baseUrl": ".",
     "paths": {
-      "#front/*": ["src/client/*"],
-      "#back/*": ["src/server/*"]
+      "#front/*": ["./src/frontend/*"],
+      "#back/*": ["./src/server/*"]
     },
     "useDefineForClassFields": true,
     "target": "ES2020",
-    "lib": ["DOM", "DOM.Iterable", "ES2020"],
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
     /* Bundler mode */
