--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-    "outDir": "dist/server",
+    "outDir": "dist/server-runtime",
     //"baseUrl": ".",
     "paths": {
       "#front/*": ["./src/frontend/*"],
