--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,27 +1,13 @@
 {
   "compilerOptions": {
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-    "outDir": "dist/server",
+    "target": "ES2020",
+    "module": "node16",
+    "moduleResolution": "node16",
     "rootDir": "src/server",
-    //"baseUrl": ".",
-    "paths": {
-      "#back/*": ["./src/server/*"]
-    },
-    /* Bundler mode */
-    "target": "ES2022",
-    "lib": ["ES2023"],
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "moduleDetection": "force",
+    "outDir": "dist/server",
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "isolatedModules": true,
-    /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "skipLibCheck": true
   },
   "include": ["src/server"]
 }
